[tool.poetry]
name = "idazen"
version = "0.1.3"
description = "Take control over your Ikea IDÅSEN standing desk without hassle and stay ZEN 🙌."
authors = ["Teo Stocco"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/zifeo/idazen"
keywords = ["idasen", "ikea", "bluetooth", "linak"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Utilities"
]

[tool.poetry.scripts]
idazen = 'idazen.main:cli'

[tool.poetry.dependencies]
python = "^3.6.1"
typer = {extras = ["all"], version = "^0.3.2"}
bleak = "^0.12.0"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.2"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

