[tool.poetry]
name = "idazen"
version = "0.2.0"
description = "Take control over your Ikea IDÅSEN standing desk without hassle and stay ZEN 🙌."
authors = ["Teo Stocco"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/zifeo/idazen"
keywords = ["idasen", "ikea", "bluetooth", "linak"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Utilities"
]

[tool.poetry.scripts]
idazen = 'idazen.main:cli'

[tool.poetry.dependencies]
python = ">=3.9.0,<3.13"
typer = "^0.9.0"
bleak = "^0.21.1"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]
pre-commit = "^3.6.0"
pytest = "^7.4.3"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.0"
tag_format = "v$major.$minor.$patch$prerelease"
version_files = [
    "pyproject.toml:version",
    "idazen/version.py"
]

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

